<resources>
    <string name="app_name">Android0104</string>

    <string name="calc">Калькулятор</string>
    <string name="btn_progress_bar">Progress Bar</string>
    <string name="btn3">Btn 3</string>

    <string name="op_mult">*</string>
    <string name="op_div">/</string>
    <string name="op_plus">+</string>
    <string name="op_minus">-</string>
    <string name="equal">=</string>
    <string name="clear">CLS</string>

    <string name="multi_window">Multiwindow mode</string>
</resources>
