<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.ivadimn.android0104.MainActivity">

    <Button
        android:id="@+id/btn_calc_id"
        android:layout_width="0dp"
        android:layout_margin="@dimen/margin_size"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn2_id"
        android:text="@string/calc"
        android:onClick="onClick"
        />

    <Button
        android:id="@+id/btn2_id"
        android:layout_width="0dp"
        android:layout_margin="@dimen/margin_size"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_calc_id"
        app:layout_constraintBottom_toTopOf="@+id/btn3_id"
        android:text="@string/btn_progress_bar"
        android:onClick="onClick"
        />

    <Button
        android:id="@+id/btn3_id"
        android:layout_width="0dp"
        android:layout_margin="@dimen/margin_size"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn2_id"
        android:text="@string/btn3"
        android:onClick="onClick"
        />



</android.support.constraint.ConstraintLayout>
