<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.ivadimn.android0104.CalcActivity">

    <EditText
        android:id="@+id/et_op1_id"
        android:layout_width="@dimen/op_edit_size"
        android:layout_height="wrap_content"
        android:background="@color/colorEdit"
        android:inputType="numberDecimal"
        android:gravity="right"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_size"
        android:layout_marginLeft="@dimen/margin_size"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <EditText
        android:id="@+id/et_op2_id"
        android:layout_width="@dimen/op_edit_size"
        android:layout_height="wrap_content"
        android:background="@color/colorEdit"
        android:inputType="numberDecimal"
        android:gravity="right"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_size"
        android:layout_marginRight="@dimen/margin_size"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/tv_op_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_size"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@id/et_op1_id"
        app:layout_constraintRight_toLeftOf="@id/et_op2_id"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="+"/>


    <TextView
        android:id="@+id/tv_equal_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_size"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_op1_id"
        app:layout_constraintHorizontal_bias="0.2"
        android:text="@string/equal"/>

    <TextView
        android:id="@+id/tv_result_id"
        android:layout_width="@dimen/op_edit_size"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_size"
        android:background="@color/colorEdit"
        android:textSize="20sp"
        android:gravity="right"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_op1_id"
        app:layout_constraintHorizontal_bias="0.6"
        tools:text="278782"/>

    <Button
        android:id="@+id/btn_mult_id"
        android:layout_width="@dimen/btn_op_size"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_size"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tv_result_id"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btn_div_id"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:text="@string/op_mult"
        android:tag="@string/op_mult"
        android:onClick="onClick"
        />
    <Button
        android:id="@+id/btn_div_id"
        android:layout_width="@dimen/btn_op_size"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_size"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tv_result_id"
        app:layout_constraintLeft_toRightOf="@id/btn_mult_id"
        app:layout_constraintRight_toLeftOf="@+id/btn_plus_id"
        android:text="@string/op_div"
        android:tag="@string/op_div"
        android:onClick="onClick"
        />
    <Button
        android:id="@+id/btn_plus_id"
        android:layout_width="@dimen/btn_op_size"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_size"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tv_result_id"
        app:layout_constraintLeft_toRightOf="@id/btn_div_id"
        app:layout_constraintRight_toLeftOf="@+id/btn_minus_id"
        android:text="@string/op_plus"
        android:tag="@string/op_plus"
        android:onClick="onClick"
        />
    <Button
        android:id="@+id/btn_minus_id"
        android:layout_width="@dimen/btn_op_size"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_size"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tv_result_id"
        app:layout_constraintLeft_toRightOf="@id/btn_plus_id"
        app:layout_constraintRight_toLeftOf="@+id/btn_equal_id"
        android:text="@string/op_minus"
        android:tag="@string/op_minus"
        android:onClick="onClick"
        />
    <Button
        android:id="@+id/btn_equal_id"
        android:layout_width="@dimen/btn_equal_size"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_size"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tv_result_id"
        app:layout_constraintLeft_toRightOf="@id/btn_minus_id"
        app:layout_constraintRight_toLeftOf="@+id/btn_clear_id"
        android:text="@string/equal"
        android:tag="@string/equal"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/btn_clear_id"
        android:layout_width="@dimen/btn_equal_size"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_size"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tv_result_id"
        app:layout_constraintLeft_toRightOf="@id/btn_equal_id"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/clear"
        android:tag="@string/clear"
        android:onClick="onClick"
        />

</android.support.constraint.ConstraintLayout>
